# DIyIMS

./: .gitignore  .pre-commit-config.yaml  Design.md  README.md  Ramblings.md  otox.ini  pyproject.toml  todo.md  totdo.txt  tox.ini
src/diyims/: beacon.py  beacon_cli.py  beacon_multi.py  beacon_runner.py  beacon_utils.py  capture_utils.py  capture_want_lists.py  cartxt  config.py  config_utils.py  configuration_cli.py  create_db.py  database.py  database_cli.py  database_install.py  database_operations.py  database_utils.py  diyims.py  diyims_cmd.py  error_classes.py  experimental.py  find_providers.py  general_utils.py  header_ops.py  header_utils.py  import_lib.py  import_lib9.py  init_db_env.py  install.py  install_cli.py  ipfs_utils.py  logger_utils.py  os_platform.py  path_utils.py  paths.py  peer_capture.py  peer_capture_design.md  peer_utils.py  platform_utils.py  posix_path.py  (+21 more)
src/diyims/resources/: cartext.car  cartxt.car
src/diyims/sql/: queries.sql  scripts.sql
tests/: admin_test.py  beacon_test.py  component_test.py  function_scope_test.py  mp_test.py  scheduler_test.py  seesion_scope_test.py  session_scope_test.py  temp_test.py  test_cli.py
